[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Levels/Dynasty/DynastyTileset.tsx" type="TileSet" id=1]
[ext_resource path="res://src/Effects/Materials/RemainsParticle.tres" type="Material" id=2]
[ext_resource path="res://src/Effects/Textures/remains_glass.png" type="Texture" id=3]
[ext_resource path="res://src/Levels/Dynasty/BreakableGlass.gd" type="Script" id=4]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=5]
[ext_resource path="res://src/Sounds/Ice Break.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 32 )

[sub_resource type="CanvasItemMaterial" id=2]
render_priority = -1
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 3
particles_anim_loop = false

[node name="BreakableGlass" type="Node2D"]
z_index = -3
script = ExtResource( 4 )

[node name="tileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 248, 0, 1, 249, 0, 2, 250, 0, 3, 250, 0, 4, 250, 0, 5, 250, 0, 6, 250, 0, 7, -536870661, 0, 65536, 280, 0, 65537, 281, 0, 65538, -536870631, 0, 65539, 281, 0, 65540, 281, 0, 65541, -536870631, 0, 65542, 281, 0, 65543, -536870662, 0, 131072, -2147483398, 0, 131073, 281, 0, 131074, 281, 0, 131075, 281, 0, 131076, -536870631, 0, 131077, 281, 0, 131078, -536870631, 0, 131079, -536870662, 0, 196608, -2147483397, 0, 196609, 1073742074, 0, 196610, 1073742074, 0, 196611, 1073742074, 0, 196612, 1073742074, 0, 196613, 1073742074, 0, 196614, 1073742074, 0, 196615, -1610612485, 0 )

[node name="player_detector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="collisionShape2D" type="CollisionShape2D" parent="player_detector"]
position = Vector2( 64, 32 )
shape = SubResource( 1 )

[node name="shot_detector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="collisionShape2D" type="CollisionShape2D" parent="shot_detector"]
position = Vector2( 64, 32 )
shape = SubResource( 1 )

[node name="remains" type="Particles2D" parent="."]
material = SubResource( 2 )
position = Vector2( 64, 32 )
z_index = 3
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -600, -100, 1200, 200 )
process_material = ExtResource( 2 )
texture = ExtResource( 3 )

[node name="shatter" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -8.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 5 )

[node name="visibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 64, 32 )
scale = Vector2( 6.4, 3.2 )
pause_particles = false
process_parent = true
physics_process_parent = true

[connection signal="body_entered" from="player_detector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_entered" from="shot_detector" to="." method="_on_shot_detector_body_entered"]
